# adb-protocol

./: Cargo.toml  README.md
src/: lib.rs
src/commands/: ad_hoc.rs  derives.rs  mod.rs  shell_cmd.rs  switch_shell.rs  to_shell.rs  transport.rs
src/protocol/: adb_respond.rs  config.rs  impls.rs  mod.rs  service.rs
src/protocol/commands/: derives.rs  mod.rs  transport.rs
src/protocol/service/: imm_cmd.rs  interact_cmd.rs
src/shell/: builder.rs  mod.rs  service.rs
src/utils/: adb_ext.rs  mod.rs
src/utils/imm_cmd/: mod.rs  req_service.rs  resp_service.rs
src/utils/interact_cmd/: cmd_req.rs  cmd_resp.rs  mod.rs
